--- a/tutorship/src/app/components/registrar/registrar.component.html
+++ b/tutorship/src/app/components/registrar/registrar.component.html
@@ -5,7 +5,7 @@
       <div class="row">
         <div class="col-md-6 mb-3">
           <label for="firstName">Primer nombre</label>
-          <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
+          <input type="text" class="form-control" id="firstName"  required>
           <div class="invalid-feedback">
             Valid first name is required.
           </div>
@@ -50,7 +50,7 @@
             Please select a valid country.
           </div>
         </div>
-            
+        <button class="btn btn-primary btn-lg btn-block" type="submit">Registrarse</button>
 </form>
 </div>
      
