register form completed
register form completed

--- a/tutorship/src/app/app.component.html
+++ b/tutorship/src/app/app.component.html
@@ -4,6 +4,7 @@
 <body>
   <app-nav-bar></app-nav-bar>
   <div class="container">
+    <flash-messages></flash-messages>
     <router-outlet></router-outlet>
     <!--this is for our routes -->
   </div>
