--- a/tutorship/src/app/components/login/login.component.html
+++ b/tutorship/src/app/components/login/login.component.html
@@ -1,3 +1,19 @@
-<p>
-  login works!
-</p>
+<div class="container">
+  <div class="text-center">
+    <form class="form-signin">
+      <img class="mb-5" src="/assets/think2.png">
+      <h1 class="h3 mb-3 font-weight-normal">Iniciar sesion</h1>
+      <label for="codigo" class="sr-only">codigo</label>
+      <input type="email" name="codigo" class="form-control" placeholder="codigo" required autofocus>
+      <label for="inputPassword" class="sr-only">Password</label>
+      <input type="password" name="contrasena" class="form-control" placeholder="Password" required>
+      <div class="checkbox mb-3">
+        <label>
+          <input type="checkbox" value="remember-me"> Recordarme
+        </label>
+      </div>
+      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      <p class="mt-5 mb-3 text-muted">&copy; 2017-2019</p>
+    </form>
+  </div>
+</div>
