--- a/tutorship/src/app/components/nav-bar/nav-bar.component.html
+++ b/tutorship/src/app/components/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand"><img src="/assets/think.png" class="logo"></a>
+    <a class="navbar-brand"><img src="/assets/think1.png" class="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
