--- a/tutorship/src/app/components/registrar/registrar.component.html
+++ b/tutorship/src/app/components/registrar/registrar.component.html
@@ -1,59 +1,59 @@
 <div class="row justify-content-md-center">
     
-    <form class="needs-validation"  (ngSubmit)="onSubmit()" #registrar="ngForm" novalidate>
-        <h4 class="mb-3">Registro</h4>
-      <div class="row">
-        <div class="col-md-6 mb-3">
-          <label for="firstName">Primer nombre</label>
-          <input type="text" class="form-control" name="firstName" [(ngModel)]="firstName" #name="ngModel" required>
-          <div *ngIf="name.invalid && (name.dirty || name.touched)">
-            <div  class="invalid-feedback" *ngIf="name.errors.required">
-                Por fabor ingrese su nombre.
-            </div>
-            
+  <form class="needs-validation"  (ngSubmit)="onSubmit()" #registrar="ngForm" novalidate>
+      <h4 class="mb-3">Registro</h4>
+    <div class="row">
+      <div class="col-md-6 mb-3">
+        <label for="firstName">Primer nombre</label>
+        <input type="text" class="form-control" name="nombre" [(ngModel)]="nombre" #name="ngModel" required>
+        <div *ngIf="name.invalid && (name.dirty || name.touched)">
+          <div  class="invalid-feedback" >
+              Por favor ingrese su nombre.
           </div>
+          
         </div>
-        <div class="col-md-6 mb-3">
-          <label for="lastName">apellidos</label>
-          <input type="text" class="form-control" name="lastName" [(ngModel)]="lastName" required>
-          <div class="invalid-feedback">
-            Valid last name is required.
-          </div>
-        </div>        
-      </div>     
-      <div class="mb-3">
-          <label for="codigo">codigo</label>
-          <input type="text" class="form-control" name="codigo" [(ngModel)]="codigo" required>
-          <div class="invalid-feedback">
-            Valid last name is required.
-          </div>
+      </div>
+      <div class="col-md-6 mb-3">
+        <label for="lastName">apellidos</label>
+        <input type="text" class="form-control" name="apellido" [(ngModel)]="apellido" required>
+        <div class="invalid-feedback">
+          Valid last name is required.
         </div>
+      </div>        
+    </div>     
+    <div class="mb-3">
+        <label for="codigo">codigo</label>
+        <input type="text" class="form-control" name="codigo" [(ngModel)]="codigo" required>
+        <div class="invalid-feedback">
+          Valid last name is required.
+        </div>
+      </div>
 
-        <div class="mb-3">
-            <label for="password">contraseña</label>
-            <input type="text" class="form-control" name="pasword" [(ngModel)]="pasword" required>
-            <div class="invalid-feedback">
-              Valid last name is required.
-            </div>
-          </div>
       <div class="mb-3">
-        <label for="email">Correo </label>
-        <input type="email" class="form-control" name="email" [(ngModel)]="email" placeholder="you@example.com" required>
-        <div class="invalid-feedback" >
-          Please enter a valid email address for shipping updates.
-        </div>
-      </div>  
-      <div class="mb-3">
-          <label for="country">Carrera</label>
-          <select class="custom-select d-block w-100" name="carrera" required>  
-            <option *ngFor="let carrer of carrerss" value="carrer">{{carrer}}</option>          
-          </select>
+          <label for="password">contraseña</label>
+          <input type="text" class="form-control" name="contrasena" [(ngModel)]="contrasena" required>
           <div class="invalid-feedback">
-            Please select a valid country.
+            Valid last name is required.
           </div>
         </div>
-        <button class="btn btn-primary btn-lg " type="submit" 
-        [disabled]="!registrar.form.valid" (click)="RegisterClick()">Registrarse</button>
+    <div class="mb-3">
+      <label for="email">Correo </label>
+      <input type="email" class="form-control" name="email" [(ngModel)]="email" placeholder="you@example.com" required>
+      <div class="invalid-feedback" >
+        Please enter a valid email address for shipping updates.
+      </div>
+    </div>  
+    <div class="mb-3">
+        <label for="country">Carrera</label>
+        <select class="custom-select d-block w-100" name="programa" required>  
+          <option *ngFor="let career of careras" value="programa">{{career}}</option>          
+        </select>
+        <div class="invalid-feedback">
+          Please select a valid country.
+        </div>
+      </div>
+      <button class="btn btn-primary btn-lg " type="submit" 
+      [disabled]="!registrar.form.valid" (click)="RegisterClick()">Registrarse</button>
 </form>
 </div>
-     
+   
