--- a/tutorship/src/app/components/nav-bar/nav-bar.component.html
+++ b/tutorship/src/app/components/nav-bar/nav-bar.component.html
@@ -1,19 +1,26 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
     <a class="navbar-brand"><img src="/assets/think1.png" class="logo"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+      aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" routerLink="" routerLinkActive="active" >Home</a>
+          <a class="nav-link" routerLink="/" routerLinkActive="active">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/login" routerLinkActive="active">login</a>
+          <a class="nav-link" routerLink="/login" *ngIf="!this.authService.IsLoggedIn()" routerLinkActive="active">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/registrar" routerLinkActive="active">registro</a>
+          <a class="nav-link" routerLink="/registrar" *ngIf="!this.authService.IsLoggedIn()" routerLinkActive="active">Registro</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/perfil" *ngIf="this.authService.IsLoggedIn()" routerLinkActive="active">Perfil</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" (click)="signUserOut()" *ngIf="this.authService.IsLoggedIn()">Logout</a>
         </li>
       </ul>
       <form class="form-inline mt-2 mt-md-0">
