--- a/frontend/src/app/components/home2/home2.component.html
+++ b/frontend/src/app/components/home2/home2.component.html
@@ -233,18 +233,18 @@
           <div class="modal-body">
             <form>
               <div class="form-group">
-                <label for="recipient-name" class="col-form-label">Recipient:</label>
-                <input type="text" class="form-control" id="recipient-name">
+                <label for="recipient-name" class="col-form-label">Usuario:</label>
+                <input type="text" class="form-control" placeholder="email o código" name="usuario" [(ngModel)]="usuario" required>
               </div>
               <div class="form-group">
-                <label for="message-text" class="col-form-label">Message:</label>
-                <textarea class="form-control" id="message-text"></textarea>
+                <label for="message-text" class="col-form-label">Contraseña:</label>
+                <input type="password" class="form-control" placeholder="contraseña" name="contrasena" [(ngModel)]="contrasena" required>
               </div>
             </form>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Send message</button>
+            <button type="button" class="btn btn-primary" (click)="logUser()" >Iniciar Sesión</button>
           </div>
         </div>
       </div>
