--- a/frontend/src/app/components/home2/home2.component.html
+++ b/frontend/src/app/components/home2/home2.component.html
@@ -42,6 +42,8 @@
       </button>
       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"
         data-whatever="@fat">Inicio Sesión</button>
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal2"
+        data-whatever="@fat">Crear cuenta</button>
     </nav>
   </header>
 
@@ -61,12 +63,14 @@
               <h1>Sientete mas comodo tomando tutorias.</h1>
               <p>Prueba este modo de solicitar tutorias entre tus propios compañeros sientete mas comodo
                 y con confianza.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+              <p><a class="btn btn-lg btn-primary" data-toggle="modal" data-target="#exampleModal2"
+                data-whatever="@fat"  role="button">Sign up today</a>
+              </p>
             </div>
           </div>
         </div>
         <div class="carousel-item">
-            <img src="/assets/indexpage/img/bg-masthead.jpg" alt="">
+          <img src="/assets/indexpage/img/bg-masthead.jpg" alt="">
           <div class="container">
             <div class="carousel-caption">
               <h1>Conoce a tus tutores.</h1>
@@ -77,12 +81,12 @@
           </div>
         </div>
         <div class="carousel-item">
-            <img src="/assets/indexpage/img/bg-masthead.jpg" alt="">
+          <img src="/assets/indexpage/img/bg-masthead.jpg" alt="">
           <div class="container">
             <div class="carousel-caption text-right">
               <h1>Se un tutor tambien .</h1>
               <p>tienes la posibilidad de ser un tutor solo tienes que enviar un formato
-                  que se evaluara y se decidira si puedes ser tutor o no.</p>
+                que se evaluara y se decidira si puedes ser tutor o no.</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
             </div>
           </div>
@@ -108,21 +112,21 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
-            <img src="/assets/indexpage/img/testimonials-1.jpg" height="60%" width="60%"
+          <img src="/assets/indexpage/img/testimonials-1.jpg" height="60%" width="60%"
             class="img-fluid rounded-circle mb-3">
           <h2>María E.</h2>
           <p>"¡Todas las tutorias que ofrecí me ayudaron a mejorar mis habilidades comunicativas!".</p>
           <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-            <img src="/assets/indexpage/img/testimonials-2.jpg" height="60%" width="60%"
+          <img src="/assets/indexpage/img/testimonials-2.jpg" height="60%" width="60%"
             class="img-fluid rounded-circle mb-3">
           <h2>Fredy S.</h2>
           <p>"Se siente bien hablar con otros estudiantes para aclarar mis dudas."</p>
           <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-            <img src="/assets/indexpage/img/testimonials-3.jpg" height="60%" width="60%"
+          <img src="/assets/indexpage/img/testimonials-3.jpg" height="60%" width="60%"
             class="img-fluid rounded-circle mb-3">
           <h2>Sarah W.</h2>
           <p>"Este método me ha ayudado a mejorar mi promedio en clases por las que antes sufría mucho."</p>
@@ -138,11 +142,12 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Matemáticas.</h2>
-          <p class="lead">Las matemáticas es uno de los conocimientos más antiguos que el ser humano ha estudiado e investigado y están presentes en todos los ámbitos de nuestra vida cotidiana. 
-              Te invitamos a aprender más sobre esta importante ciencia.</p>
+          <p class="lead">Las matemáticas es uno de los conocimientos más antiguos que el ser humano ha estudiado e
+            investigado y están presentes en todos los ámbitos de nuestra vida cotidiana.
+            Te invitamos a aprender más sobre esta importante ciencia.</p>
         </div>
         <div class="col-md-5">
-            <img src="/assets/indexpage/img/bg-showcase-1.jpg" height="100%" width="100%">
+          <img src="/assets/indexpage/img/bg-showcase-1.jpg" height="100%" width="100%">
         </div>
       </div>
 
@@ -151,11 +156,13 @@
       <div class="row featurette">
         <div class="col-md-7 order-md-2">
           <h2 class="featurette-heading">Tecnologías de la información.</h2>
-          <p class="lead">Las Tecnologías de la Información y la Comunicación son un conjunto de servicios, redes, software y aparatos que tienen como fin la mejora de la calidad de vida de las personas dentro de un entorno, y que se integran a un sistema de información interconectado y complementario. 
-              Si deseas ayuda con cualquier tema relacionado, ven y te ayudaremos.</p>
+          <p class="lead">Las Tecnologías de la Información y la Comunicación son un conjunto de servicios, redes,
+            software y aparatos que tienen como fin la mejora de la calidad de vida de las personas dentro de un
+            entorno, y que se integran a un sistema de información interconectado y complementario.
+            Si deseas ayuda con cualquier tema relacionado, ven y te ayudaremos.</p>
         </div>
         <div class="col-md-5 order-md-1">
-            <img src="/assets/indexpage/img/bg-showcase-2.jpg" height="100%" width="100%">
+          <img src="/assets/indexpage/img/bg-showcase-2.jpg" height="100%" width="100%">
         </div>
       </div>
 
@@ -164,14 +171,14 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Psicologia.</h2>
-          <p class="lead">La psicología es la ciencia que estudia la mente y la conducta en interacción 
+          <p class="lead">La psicología es la ciencia que estudia la mente y la conducta en interacción
             con el contexto. Filósofos y científicos han tratado por cientos de años de delimitar las
-             entidades a las que nos referimos cuando los usamos sin lograr un acuerdo definitivo,
-              sin embargo, acá podrás encontrar información de utilidad para este importante proyecto de 
-              aprendizaje.</p>
+            entidades a las que nos referimos cuando los usamos sin lograr un acuerdo definitivo,
+            sin embargo, acá podrás encontrar información de utilidad para este importante proyecto de
+            aprendizaje.</p>
         </div>
         <div class="col-md-5">
-            <img src="/assets/indexpage/img/bg-showcase-3.jpg" height="100%" width="100%">
+          <img src="/assets/indexpage/img/bg-showcase-3.jpg" height="100%" width="100%">
         </div>
       </div>
 
@@ -214,6 +221,76 @@
         </div>
       </div>
     </div>
+
+    <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+      aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Iniciar Sesión</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form class="needs-validation" (submit)="registerNewUser()" [noValidate]="false">
+              <div class="row">
+                <div class="col-md-6 mb-3">
+                  <label for="firstName">Nombres</label>
+                  <input type="text" class="form-control" name="nombre" [(ngModel)]="nombre" required
+                    pattern="[a-zA-Z]+" title="El nombre debe incluir mínimo 3 letras">
+
+                </div>
+                <div class="col-md-6 mb-3">
+                  <label for="lastName">Apellidos</label>
+                  <input type="text" class="form-control" name="apellido" [(ngModel)]="apellido" required
+                    pattern="[aA-zZ]{3,10}" title="El apellido debe incluir mínimo 3 letras">
+                </div>
+              </div>
+
+              <div class="mb-3">
+                <label for="username">Código</label>
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text">Codigo</span>
+                  </div>
+                  <input type="text" class="form-control" name="codigo" placeholder="506223588" [(ngModel)]="codigo"
+                    pattern="^(50)([0-9]{7})$" maxlength="9" title="el codigo incluye 9 digitos, comienza en 50"
+                    required>
+                </div>
+              </div>
+
+              <div class="mb-3">
+                <label for="email">Email</label>
+                <input type="email" class="form-control" name="email" placeholder="you@example.com" [(ngModel)]="email"
+                  placeholder="example@email.com" required>
+
+              </div>
+
+              <div class="mb-3">
+                <label for="address">Contrasena</label>
+                <input type="password" class="form-control" name="contrasena" [(ngModel)]="contrasena" required
+                  pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d).{8,10}$"
+                  title="La contraseña debe contener mínimo 8 caracteres entre ellos una mayúscula, minúscula y un número">
+              </div>
+
+
+              <div class="row">
+                <div class="col-md-9">
+                  <label for="country">Programa Académico</label>
+                  <select class="form-control" name="programa" [(ngModel)]="programa" required>
+                    <option *ngFor="let carrera of careras">{{carrera}}</option>
+                  </select>
+                </div>
+              </div>
+              <hr class="mb-4">
+              <button class="btn btn-primary btn-lg btn-block" type="submit" value="submit">Registrarme</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
     <!-- FOOTER -->
     <footer class="container">
