--- a/frontend/src/app/components/home2/home2.component.css
+++ b/frontend/src/app/components/home2/home2.component.css
@@ -83,6 +83,9 @@ body {
     }
   }
   
+  .maredit{
+    margin: 1%;
+  }
   @media (min-width: 62em) {
     .featurette-heading {
       margin-top: 7rem;
