--- a/frontend/src/app/components/home2/home2.component.html
+++ b/frontend/src/app/components/home2/home2.component.html
@@ -40,9 +40,9 @@
         aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"
+      <button type="button" class="btn btn-primary maredit" data-toggle="modal" data-target="#exampleModal"
         data-whatever="@fat">Inicio Sesión</button>
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal2"
+      <button type="button" class="btn btn-primary maredit" data-toggle="modal" data-target="#exampleModal2"
         data-whatever="@fat">Crear cuenta</button>
     </nav>
   </header>
