--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -38,13 +38,13 @@
                   <li class="nav-item">
                     <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
                       <i class="fas fa-fw fa-cog"></i>
-                      <span>Components</span>
+                      <span>Perfil</span>
                     </a>
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                       <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Components:</h6>
+                        <h6 class="collapse-header">Opciones:</h6>
                         <a class="collapse-item" [routerLink]="['/perfil']" routerLinkActive="router-link-active" >Perfil</a>
-                        <a class="collapse-item" href="cards.html">Cards</a>
+                        <a class="collapse-item" href="cards.html">editar</a>
                       </div>
                     </div>
                   </li>
@@ -53,14 +53,14 @@
                   <li class="nav-item">
                     <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
                       <i class="fas fa-fw fa-wrench"></i>
-                      <span>Utilities</span>
+                      <span>Tutorias</span>
                     </a>
                     <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
                       <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Utilities:</h6>
-                        <a class="collapse-item" href="utilities-color.html">Colors</a>
-                        <a class="collapse-item" href="utilities-border.html">Borders</a>
-                        <a class="collapse-item" href="utilities-animation.html">Animations</a>
+                        <h6 class="collapse-header">Opciones:</h6>
+                        <a class="collapse-item" href="utilities-color.html">Tutores</a>
+                        <a class="collapse-item" href="utilities-border.html">Solicitar tutoria</a>
+                        <a class="collapse-item" href="utilities-animation.html">Eliminar tutorias</a>
                         <a class="collapse-item" href="utilities-other.html">Other</a>
                       </div>
                     </div>
@@ -71,14 +71,14 @@
             
                   <!-- Heading -->
                   <div class="sidebar-heading">
-                    Addons
+                    Mas
                   </div>
             
                   <!-- Nav Item - Pages Collapse Menu -->
                   <li class="nav-item">
                     <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
                       <i class="fas fa-fw fa-folder"></i>
-                      <span>Pages</span>
+                      <span>Se tutor</span>
                     </a>
                     <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                       <div class="bg-white py-2 collapse-inner rounded">
@@ -98,14 +98,14 @@
                   <li class="nav-item">
                     <a class="nav-link" href="charts.html">
                       <i class="fas fa-fw fa-chart-area"></i>
-                      <span>Charts</span></a>
+                      <span>chat</span></a>
                   </li>
             
                   <!-- Nav Item - Tables -->
                   <li class="nav-item">
                     <a class="nav-link" href="tables.html">
                       <i class="fas fa-fw fa-table"></i>
-                      <span>Tables</span></a>
+                      <span>info</span></a>
                   </li>
             
                   <!-- Divider -->
@@ -278,7 +278,7 @@
                         <!-- Nav Item - User Information -->
                         <li class="nav-item dropdown no-arrow">
                           <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <span class="mr-2 d-none d-lg-inline text-gray-600 small">Valerie Luna</span>
+                            <span class="mr-2 d-none d-lg-inline text-gray-600 small">Usuario</span>
                             <img class="img-profile rounded-circle" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
                           </a>
                           <!-- Dropdown - User Information -->
